Bug 78208 - Inconsistency between touch and mouse events when weston client is maximized
Summary: Inconsistency between touch and mouse events when weston client is maximized
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-02 22:01 UTC by Anu Reddy
Modified: 2014-05-13 17:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-05-02 22:01:24 UTC
Steps:
1. Launch weston
2. Launch a client : weston-terminal
3. Maximize the client
4. Using mouse pointer, try to grab client’s tittle bar and move the client around the screen. Client does not move.
5. Now, touch client’s tittle bar and move the client around the screen. Observe client proceed touch.  


Software Stack:
wayland (HEAD) 1.4.92-0-g4a4523f
drm (HEAD) libdrm-2.4.52-0-g46d451c
mesa (HEAD) remotes/origin/10.1-0-g340ebdb
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.2-0-g121e70d
cairo (HEAD) heads/1.12-0-g59e2a93
libinput (HEAD) remotes/origin/HEAD-0-g97af5c3
weston (HEAD) 1.4.92-0-gd7d71e8
Comment 1 U. Artie Eoff 2014-05-07 16:12:36 UTC
Ander posted a patch to the list http://lists.freedesktop.org/archives/wayland-devel/2014-May/014667.html
Comment 2 Kristian Høgsberg 2014-05-09 20:34:02 UTC
commit 6d43f045e3495b9967a75ae6594ca3415b2661a6
Author: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
Date:   Wed May 7 14:22:23 2014 +0300

    shell: Don't allow maximized surfaces to be moved with touch
    
    Moving a maximized surface with the pointer is already not possible,
    so make the behavior with touch consistent.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=78208


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.